# SNeRG-viewer

./: CMakeLists.txt  fragmentShaderSrc.txt  main.cpp
src/: OrbitControls.h  Raymarch.cpp  Raymarch.h  Scene.h  Shader.cpp  Shader.h  TrackballControls.cpp  TrackballControls.h  constants.h
